Under Construction Home Page Developed

--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<title>Learning Platform to beginners</title>
+	<link rel='stylesheet' href='./css/bootstrap.min.css'>
+	<link rel='stylesheet' href='./css/animate.min.css'>
+	<link rel='stylesheet' href='./css/style.css'>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<div class='container-fluid'>
+		<div class='row'>
+			<div class='.col-xs-12 home_page' id='enclose'>
+				<img class='home_page' id='csoon' src='./images/csoon.jpg'>	
+			</div>
+		</div>
+		<div class='row'>
+			<div class='.col-xs-12 home_page' id='enclose'>
+				<img class='home_page' id='paint' src='./images/paint.png'>	
+			</div>
+		</div>
+	</div>	
 </body>
 </html>
