Position of the paint changed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			</div>
 		</div>
 		<div class='row'>
-			<div class='.col-xs-12 home_page' id='enclose'>
+			<div class='.col-xs-12 home_page' id='paint'>
 				<img class='home_page' id='paint' src='./images/paint.png'>	
 			</div>
 		</div>
