--- a/index.html
+++ b/index.html
@@ -5,17 +5,34 @@
 	<link rel='stylesheet' href='./css/bootstrap.min.css'>
 	<link rel='stylesheet' href='./css/animate.min.css'>
 	<link rel='stylesheet' href='./css/style.css'>
+	<script type="text/javascript" src='./js/jquery.min.js'></script>
+
+	<script type="text/javascript">
+		$(document).ready(function(){
+			animations(function(){
+				$('.home_page#paint').css("display","initial");
+				$('.home_page#paint').addClass("animated slideInLeft")
+			});
+		});
+
+		function animations(callback){
+			$('.home_page#wall').addClass("animated slideInDown");
+			setInterval(callback, 1000);
+		}
+
+	</script>
+
 </head>
 <body>
 	<div class='container-fluid'>
 		<div class='row'>
 			<div class='.col-xs-12 home_page' id='enclose'>
-				<img class='home_page' id='csoon' src='./images/csoon.jpg'>	
+				<img class='home_page' id='wall' src='./images/csoon.jpg'>	
 			</div>
 		</div>
 		<div class='row'>
 			<div class='.col-xs-12 home_page' id='paint'>
-				<img class='home_page' id='paint' src='./images/paint.png'>	
+				<img class='home_page ' id='paint' src='./images/paint.png'>	
 			</div>
 		</div>
 	</div>	
