Added Sign Board

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	<title>Learning Platform to beginners</title>
 	<link rel='stylesheet' href='./css/bootstrap.min.css'>
 	<link rel='stylesheet' href='./css/animate.min.css'>
+	<link rel='stylesheet' href='./semantic/semantic.min.css'>
 	<link rel='stylesheet' href='./css/style.css'>
 	<script type="text/javascript" src='./js/jquery.min.js'></script>
+	<script type="text/javascript" src='./semantic/semantic.min.js'></script>
 
 </head>
 <body>
@@ -17,7 +19,12 @@
 		</div>
 		<div class='row'>
 			<div class='.col-xs-12 home_page' id='paint'>
-				<img class='home_page ' id='paint' src='./images/paint.png'>	
+				<img class='home_page ' id='paint' src='./images/paint.png'>
+			</div>
+		</div>
+		<div class='row'>
+			<div class='.col-xs-12 home_page' id='sign_board_div'>
+				<img class='home_page' id='sign_board' src='./images/sign_board.gif'>
 			</div>
 		</div>
 	</div>	
