Added front page

--- a/index.html
+++ b/index.html
@@ -9,52 +9,33 @@
 	<script type="text/javascript" src='./semantic/semantic.min.js'></script>
 </head>
 <body>
-	<div class="ui two column grid">
-  			<div class="column">
-    			<div class="ui raised segment">
-      				<a class="ui red right ribbon label">Sign Up</a>
-      				<form class="ui form">
-  						<div class="two fields">
-  						<div class="field">	
-    						<label>First Name</label>
-    							<input type="text" name="first-name" placeholder="First Name">
-    					</div>		
-    					<div class="field">		
-    						<label>Last Name</label>
-    							<input type="text" name="last-name" placeholder="Last Name">	
-    					</div>		
-  						</div>
-  						<div class="two fields">
-  						<div class="field">
-    						<label>Email</label>
-    							<input type="email" name="email" placeholder="Email">
-  						</div>
-  						<div class="field">
-    						<label>Password</label>
-    							<input type="password" name="password" placeholder="Password">
-  						</div>
-  						</div>
-  						<button class="ui button" type="submit">Submit</button>
-					</form>	
-    			</div>
-    			</div>	
-  			<div class="column">
-    			<div class="ui segment">
-      				<a class="ui orange left ribbon label">Sign In</a>
-      				<form class="ui form">
-  						<div class="field">
-    						<label>Email</label>
-    							<input type="email" name="email" placeholder="Email">
-  						</div>
-  						<div class="field">
-    						<label>Password</label>
-    							<input type="password" name="password" placeholder="Password">
-  						</div>
-  						<button class="ui button" type="submit">Submit</button>
-					</form>	
-    			</div>
-  			</div>
-	</div>
+   <img class="wall" src="./images/csoon.jpg">
+   <div class='what' id='desc'>
+      <label>function what_can_you_do(){</label><br><br>
+      <label>&nbsp&nbsp&nbspconsole.log("Upload Questions");</label><br>
+      <label>&nbsp&nbsp&nbspconsole.log("Conduct Test");</label><br>
+      <label>&nbsp&nbsp&nbspconsole.log("Take Test");</label><br><br>
+      <label>}</label>
+   </div>
+   <div class='contact' id='desc'>
+      <label>package name.vemurisaikarthik;</label><br><br>
+      <label>class Contact{</label><br><br>
+      <label>String phone,email;</label><br><br>
+      <label>Contact(){</label><br>
+      <label>&nbsp&nbsp&nbspphone = "9640129184";</label><br>
+      <label>&nbsp&nbsp&nbspemail = "vskb99.corporate@outlook.com";</label><br>
+      <label>}</label>
+      <label>}</label>
+   </div>
+   <div class='begin' id='desc'>
+      <label><u>Start learning here</u> &#x2197&#x2197&#x2197</label>
+   </div>
+   <div id='grad'>
+      <a href="./login/index.html">
+        <img class="wall" src="./images/logo.gif">
+      </a>
+   </div>   
+   <center><h1 id='welcome'>WELCOME ENTHUSIASTS</h1></center>
 </div>	
 </body>
 </html>
