--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
    </div>
    <div id='grad'>
       <a href="./login/index.html">
-        <img class="wall" src="./images/logo.gif">
+        <img class="grad_logo" src="./images/logo.gif">
       </a>
    </div>   
    <center><h1 id='welcome'>WELCOME ENTHUSIASTS</h1></center>
